LMC name changed to CompareByUs

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "LetmeCoupon Main SITE",
-    "short_name": "LetmeCoupon Main SITE",
+    "name": "CompareByUs Main SITE",
+    "short_name": "CompareByUs Main SITE",
     "icons": [{
         "src": "/logo.png",
         "sizes": "192x192",
